--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Udaypc.github.io/Uday",
+  "homepage": "https://Udaypc.github.io/",
   "name": "Uday",
   "version": "0.1.0",
   "private": true,
